--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "webpack_pixi_typescript_boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "private": true,
   "scripts": {
-    "dev": "npx webpack --mode development --watch",
-    "prod": "npx webpack --mode production"
+    "dev": "npx cross-env NODE_ENV=development npx webpack",
+    "prod": "npx cross-env NODE_ENV=production npx webpack",
+    "watch": "npx cross-env NODE_ENV=development npx webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "cross-env": "^7.0.2",
     "html-webpack-plugin": "4.5.0",
     "webpack": "4.44.2",
-    "webpack-cli": "3.3.12"
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "pixi.js": "5.3.3"
