--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "^6.3.2",
     "cross-env": "^7.0.2",
