--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "npx cross-env NODE_ENV=development npx webpack",
-    "prod": "npx cross-env NODE_ENV=production npx webpack",
-    "watch": "npx cross-env NODE_ENV=development npx webpack-dev-server --open"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "prod": "cross-env NODE_ENV=production webpack",
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.7",
+    "@babel/core": "^7.16.0",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-typescript": "^7.12.7",
-    "babel-loader": "^8.2.1",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "cross-env": "^7.0.2",
+    "copy-webpack-plugin": "^6.4.1",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "4.5.0",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "pixi.js": "5.3.3"
+    "pixi.js": "6.2.0"
   }
 }
