--- a/package.json
+++ b/package.json
@@ -6,26 +6,35 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack",
     "prod": "cross-env NODE_ENV=production webpack",
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --open -d"
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-typescript": "^7.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.32.0",
     "cross-env": "^7.0.3",
-    "html-webpack-plugin": "4.5.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^3.4.2",
+    "regenerator-runtime": "^0.13.11",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "pixi.js": "6.2.0"
+    "@pixi-spine/runtime-4.1": "^4.0.3",
+    "gsap": "^3.12.7",
+    "howler": "^2.2.4",
+    "pixi.js": "8.6.6"
   }
 }
