--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         "typescriptreact"
     ],
     "eslint.format.enable": true,
-    "typescript.format.enable": false,
+    "typescript.format.enable": true,
     "[typescript]": {
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     },
@@ -21,21 +21,10 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "yaml.schemas": {
-        "file:///c%3A/Users/live-/.vscode/extensions/atlassian.atlascode-3.0.13/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
-    },
     "window.zoomLevel": 1,
-    "gitlens.codeLens.enabled": false,
-    "gitlens.hovers.currentLine.over": "line",
-    "gitlens.views.scm.grouped.views": {
-        "commits": true,
-        "branches": true,
-        "remotes": true,
-        "stashes": true,
-        "tags": true,
-        "worktrees": true,
-        "contributors": true,
-        "repositories": false,
-        "searchAndCompare": true
-    }
+    "eslint.options": {
+        "overrideConfigFile": "./eslint.config.js"
+    },
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+    "notebook.defaultFormatter": "dbaeumer.vscode-eslint"
 }
