--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "@babel/core": "^7.22.0",
         "@babel/preset-env": "^7.22.0",
         "@babel/preset-typescript": "^7.22.0",
-        "@typescript-eslint/eslint-plugin": "^8.21.0",
-        "@typescript-eslint/parser": "^8.21.0",
+        "@stylistic/eslint-plugin": "^3.0.0",
+        "@typescript-eslint/parser": "^8.22.0",
         "babel-loader": "^9.1.2",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
