update eslint, ts, webpack config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,14 @@
         "overrideConfigFile": "./eslint.config.js"
     },
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-    "notebook.defaultFormatter": "dbaeumer.vscode-eslint"
+    "notebook.defaultFormatter": "dbaeumer.vscode-eslint",
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "typescript.preferences.importModuleSpecifierEnding": "auto",
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "typescript.preferences.importModuleSpecifier": "non-relative",
+    "javascript.preferences.importModuleSpecifier": "non-relative",
+    "typescript.preferences.quoteStyle": "single",
+    "javascript.preferences.quoteStyle": "single",
+    "javascript.format.semicolons": "remove",
+    "typescript.format.semicolons": "remove"
 }
