--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,33 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      "moduleResolution": "node",
+  "compilerOptions": {
+      "target": "ESNext",
+      "module": "ESNext",
+      "moduleResolution": "Bundler",
       "strict": true,
       "allowSyntheticDefaultImports": true,
       "skipLibCheck": true,
       "outDir": "./dist",
+      "rootDir": "./src",
       "baseUrl": "./",
-      "forceConsistentCasingInFileNames": true
-    },
-    "exclude": ["node_modules", "dist"]
-  }
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitAny": true,
+      "preserveValueImports": false,
+      "isolatedModules": true,
+      "paths": {
+          "@/*": [
+              "src/*"
+          ]
+      }
+  },
+  "include": [
+      "src"
+  ],
+  "exclude": [
+      "node_modules",
+      "dist"
+  ]
+}
